# digital-repository-of-taiwan-provincial-assembly-scraper

./: README.md  app.spec  pyproject.toml
