[tool.poetry]
name = "drtpa-scraper"
version = "1.0.3"
description = "臺灣省議會史料總庫檢索結果截取器"
license = "MPL-2.0"
authors = ["Henry Chang <mr.changyuheng@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/changyuheng/drtpa-scraper"
packages = [
    { include = "drtpa_scraper", from = "packages" },
]

[tool.poetry.dependencies]
python = "^3.10"
dacite = "^1.6.0"
selenium = "^4.1.3"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.10"

[tool.poetry.scripts]
drtpa-scraper = 'drtpa_scraper.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
